# bdd100k-perception

./: .dockerignore  .gitignore  Dockerfile  Project_Readme.md  README.md  docker-compose.yml  mlflow.db  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
bdd100k_perception.egg-info/: PKG-INFO  SOURCES.txt
configs/: dataset.yaml  mlflow.yaml  model.yaml  training.yaml  yolo_dataset.yaml
notebook/: analyze_dataset.ipynb  yolo_feature_visualization.ipynb
notebook/docs/: 02_yolov8_architecture.md  03_yolov8_training_and_loss_functions.md  04_object_detection_metrics.md  06_failure_analysis.md  data_analysis.md
outputs/mlflow/: mlflow.db
outputs/reports/: class_distribution.csv  invalid_boxes.csv  scene_distribution.csv  timeofday_distribution.csv  train_class_distribution.csv  train_objects_sample.csv  train_quality_report.csv  train_scene_distribution.csv  train_timeofday_distribution.csv  train_val_class.csv  train_val_scene.csv  train_val_timeofday.csv  train_val_weather.csv  train_weather_distribution.csv  val_class_distribution.csv  val_scene_distribution.csv  val_timeofday_distribution.csv  val_weather_distribution.csv  weather_distribution.csv
scripts/: analyze_dataset.py  batch_predict.py  check_runs.py  convert_to_yolo.py  evaluate.py  get_best_model.py  inspect_label.py  predict.py  test_paths.py  train_yolo.py  validate_dataset.py
src/analysis/: bbox_stats.py  class_stats.py  occlusion_stats.py  scene_stats.py  train_val_comparison.py
tests/: test.py  test_dataframe_builder.py  test_parser.py  test_path.py  test_schema.py
(+31 files in other folders)
