[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bdd100k-analysis"
version = "0.1.0"
description = "BDD100K object detection dataset analysis and Streamlit dashboard"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Rakesh Kumar" }
]
dependencies = [
    "pandas==2.3.3",
    "numpy==2.4.6",
    "matplotlib==3.10.9",
    "streamlit==1.58.0",
    "PyYAML==6.0.3",
    "opencv-python==4.13.0.92",
    "plotly==6.8.0",
    "pillow==12.2.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.pylint.main]
py-version = "3.10"

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
    "too-few-public-methods"
]

[tool.pylint.design]
max-args = 8
max-locals = 25
max-branches = 15
max-statements = 60